# vacansy-searcher_with_PSQL

./: .coverage  .env_template  .gitignore  pyproject.toml
src/: ABS_classes.py  HH_info.py  classes.py  main.py  scratch.py
tests/: conftest.py  test_HH_info.py  test_classes.py  test_scratch.py
